<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FrontPageFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">
        <ImageView
            android:layout_width="310dp"
            android:layout_height="40dp"
            android:background="@drawable/cinemark"
            android:layout_marginBottom="10dp"
            />
        <View
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/textColorPrimary"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/catalogue_movie"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/see_movies"
                android:textColor="@color/white"
                android:layout_marginRight="7dp"
                android:backgroundTint="@color/carmesi"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginRight="7dp"
                android:text="Cines"
                android:backgroundTint="@color/carmesi"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="Promociones"
                android:backgroundTint="@color/carmesi"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/protada1"
            android:contentDescription="TODO" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/now_playing"
            android:textStyle="bold"
            android:textSize="25dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            >
            <ImageView
                android:layout_width="160dp"
                android:layout_height="260dp"
                android:background="@drawable/spiderman"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                />
            <ImageView
                android:layout_width="160dp"
                android:layout_height="260dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/matrix"
                />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coming_soon"
            android:textSize="25dp"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <ImageView
                android:layout_marginTop="15dp"
                android:layout_width="160dp"
                android:layout_height="260dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/moonfall"
                />
            <ImageView
                android:layout_width="160dp"
                android:layout_height="260dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/uncharted"
                />

        </LinearLayout>

    </LinearLayout>


</ScrollView>